Added features to direct students and teachers to the correct places on signin.
WARNING: Potential vulnerability for students to access class information through console. Fix before rollout.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -293,6 +293,11 @@ html, body {
         width: 50%;
       }
 
+      .class-code-modal-content{
+        width: 25%;
+        overflow-y: auto;
+      }
+
       /* The Close Button */
       .close {
         color: #aaaaaa;
